@@ -2,12 +2,14 @@ package top.flowerstardream.hcd.trainSeat.biz.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,15 +18,13 @@ import top.flowerstardream.hcd.trainSeat.ao.dto.ReserveSeatDTO;
 import top.flowerstardream.hcd.trainSeat.ao.dto.SeatReservationDTO;
 import top.flowerstardream.hcd.trainSeat.ao.dto.TimeDTO;
 import top.flowerstardream.hcd.trainSeat.ao.pqreq.RealTimeSchedulePageQueryREQ;
+import top.flowerstardream.hcd.trainSeat.ao.req.RealTimeScheduleREQ;
 import top.flowerstardream.hcd.trainSeat.ao.req.ScheduleREQ;
 import top.flowerstardream.hcd.trainSeat.ao.res.RealTimeScheduleRES;
 import top.flowerstardream.hcd.trainSeat.ao.res.ScheduleRES;
 import top.flowerstardream.hcd.trainSeat.biz.mapper.*;
 import top.flowerstardream.hcd.trainSeat.biz.tool.Calculation;
-import top.flowerstardream.hcd.trainSeat.bo.RouteEO;
-import top.flowerstardream.hcd.trainSeat.bo.RouteStationsEO;
-import top.flowerstardream.hcd.trainSeat.bo.ScheduleEO;
-import top.flowerstardream.hcd.trainSeat.bo.SeatReservationEO;
+import top.flowerstardream.hcd.trainSeat.bo.*;
 import top.flowerstardream.hcd.tools.result.PageResult;
 import top.flowerstardream.hcd.trainSeat.ao.pqreq.SchedulePageQueryREQ;
 import top.flowerstardream.hcd.trainSeat.biz.service.IScheduleService;
@@ -32,6 +32,7 @@ import top.flowerstardream.hcd.trainSeat.biz.service.IScheduleService;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import static top.flowerstardream.hcd.tools.exception.ExceptionEnum.*;
@@ -56,13 +57,23 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
     private RouteStationsMapper routeStationsMapper;
 
     @Resource
+    private TrainMapper trainMapper;
+
+    @Resource
+    private Calculation calculation;
+
+    @Resource
     private StationMapper stationMapper;
+
+    @Resource
+    private RouteMapper routeMapper;
 
     @Override
     public void addSchedule(ScheduleREQ scheduleREQ) {
         //参数校验
         if (scheduleREQ == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+            return;
         }
 
         //判断班次存在，存在则中断
@@ -124,7 +135,7 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
     }
 
     @Override
-    public PageResult<ScheduleEO> EmployeePageQuery(SchedulePageQueryREQ schedulePageQueryREQ) {
+    public PageResult<ScheduleRES> EmployeePageQuery(SchedulePageQueryREQ schedulePageQueryREQ) {
         //参数校验
         if (schedulePageQueryREQ == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
@@ -142,78 +153,107 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
         //创建查询条件
         LambdaQueryWrapper<ScheduleEO> queryWrapper = new LambdaQueryWrapper<>();
 
-        //处理出发时间
-        LocalDateTime startTime = schedulePageQueryREQ.getStartTime().withHour(0).withMinute(0).withSecond(0);
-        LocalDateTime startTimeX = schedulePageQueryREQ.getStartTime().withHour(23).withMinute(59).withSecond(59);
-        LocalDateTime endTime = schedulePageQueryREQ.getEndTime().withHour(0).withMinute(0).withSecond(0);
-        LocalDateTime endTimeX = schedulePageQueryREQ.getEndTime().withHour(23).withMinute(59).withSecond(59);
-
         //查询条件
-        queryWrapper.eq(ScheduleEO::getTrainId, schedulePageQueryREQ.getTrainId())
-                .eq(ScheduleEO::getRouteId, schedulePageQueryREQ.getRouteId())
-                .like(ScheduleEO::getConductor, schedulePageQueryREQ.getConductor())
-                //剩余座位数 TODO
-                .like(ScheduleEO::getAvailingTickets, schedulePageQueryREQ.getAvailingTickets())
-                .between(ScheduleEO::getStartTime, startTime, startTimeX)
-                .between(ScheduleEO::getEndTime, endTime, endTimeX);
+        if (schedulePageQueryREQ.getId() != null) {
+            queryWrapper.eq(ScheduleEO::getId, schedulePageQueryREQ.getId());
+        }
+        if (StrUtil.isNotBlank(schedulePageQueryREQ.getTrainName())) {
+            LambdaQueryWrapper<TrainEO> trainQueryWrapper = new LambdaQueryWrapper<>();
+            trainQueryWrapper.eq(TrainEO::getTrainName, schedulePageQueryREQ.getTrainName());
+            List<Long> trainIds = trainMapper.selectList(trainQueryWrapper).stream().map(TrainEO::getId).toList();
+            queryWrapper.in(ScheduleEO::getTrainId, trainIds);
+        }
+        if (StrUtil.isNotBlank(schedulePageQueryREQ.getRouteName())) {
+            LambdaQueryWrapper<RouteEO> routeQueryWrapper = new LambdaQueryWrapper<>();
+            routeQueryWrapper.eq(RouteEO::getRouteName, schedulePageQueryREQ.getRouteName());
+            List<Long> routeIds = routeMapper.selectList(routeQueryWrapper).stream().map(RouteEO::getId).toList();
+            queryWrapper.in(ScheduleEO::getRouteId, routeIds);
+        }
+        if (StrUtil.isNotBlank(schedulePageQueryREQ.getConductor())) {
+            queryWrapper.like(ScheduleEO::getConductor, schedulePageQueryREQ.getConductor());
+        }
+        if (schedulePageQueryREQ.getStartTime() != null) {
+            LocalDateTime startTime = schedulePageQueryREQ.getStartTime().withHour(0).withMinute(0).withSecond(0);
+            LocalDateTime startTimeX = schedulePageQueryREQ.getStartTime().withHour(23).withMinute(59).withSecond(59);
+            queryWrapper.between(ScheduleEO::getStartTime, startTime, startTimeX);
+        }
+        if (schedulePageQueryREQ.getEndTime() != null) {
+            LocalDateTime endTime = schedulePageQueryREQ.getEndTime().withHour(0).withMinute(0).withSecond(0);
+            LocalDateTime endTimeX = schedulePageQueryREQ.getEndTime().withHour(23).withMinute(59).withSecond(59);
+            queryWrapper.between(ScheduleEO::getEndTime, endTime, endTimeX);
+        }
 
         //执行分页查询
         Page<ScheduleEO> schedulePage = scheduleMapper.selectPage(page, queryWrapper);
+        List<ScheduleEO> records = schedulePage.getRecords();
 
-        //封装返回结果
-        PageResult<ScheduleEO> pageResult = new PageResult<>();
-        pageResult.setTotal(schedulePage.getTotal());
-        pageResult.setRecords(schedulePage.getRecords());
-        return pageResult;
-    }
-
-    @Override
-    public PageResult<ScheduleRES> UserPageQuery(SchedulePageQueryREQ schedulePageQueryREQ) {
-        //参数校验
-        if (schedulePageQueryREQ == null) {
-            THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
-        }
-
-        // 设置分页参数默认值
-        if (schedulePageQueryREQ.getPage() <= 0) {
-            schedulePageQueryREQ.setPage(1);
-        }
-        if (schedulePageQueryREQ.getPageSize() <= 0) {
-            schedulePageQueryREQ.setPageSize(10);
-        }
-
-        //创建分页对象
-        Page<ScheduleEO> page = new Page<>(schedulePageQueryREQ.getPage(), schedulePageQueryREQ.getPageSize());
-        //创建查询条件
-        LambdaQueryWrapper<ScheduleEO> queryWrapper = Wrappers.lambdaQuery();
-
-        //查询条件
-        queryWrapper.eq(ScheduleEO::getTrainId, schedulePageQueryREQ.getTrainId())
-                .eq(ScheduleEO::getRouteId, schedulePageQueryREQ.getRouteId())
-                .like(ScheduleEO::getConductor, schedulePageQueryREQ.getConductor())
-                //剩余座位数 TODO
-                .like(ScheduleEO::getAvailingTickets, schedulePageQueryREQ.getAvailingTickets())
-                .eq(ScheduleEO::getStartTime, schedulePageQueryREQ.getStartTime())
-                .eq(ScheduleEO::getEndTime, schedulePageQueryREQ.getEndTime());
-
-
-        //执行分页查询
-        Page<ScheduleEO> schedulePage = scheduleMapper.selectPage(page, queryWrapper);
-
+        List<Long> trainIds = records.stream().map(ScheduleEO::getTrainId).distinct().toList();
+        List<Long> routeIds = records.stream().map(ScheduleEO::getRouteId).distinct().toList();
+        Map<Long, String> trainNameMap = trainMapper.selectBatchIds(trainIds).stream()
+                .collect(Collectors.toMap(TrainEO::getId, TrainEO::getTrainName));
+        Map<Long, String> routeNameMap = routeMapper.selectBatchIds(routeIds).stream()
+                .collect(Collectors.toMap(RouteEO::getId, RouteEO::getRouteName));
         //将EO转换为RES
         List<ScheduleRES> resList = schedulePage.getRecords().stream()
                 .map(eo -> {
                     ScheduleRES res = new ScheduleRES();
                     BeanUtil.copyProperties(eo, res);
+                    res.setTrainName(trainNameMap.get(eo.getTrainId()));
+                    res.setRouteName(routeNameMap.get(eo.getRouteId()));
                     return res;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         //封装返回结果
         PageResult<ScheduleRES> pageResult = new PageResult<>();
         pageResult.setTotal(schedulePage.getTotal());
         pageResult.setRecords(resList);
-        return pageResult ;
+        return pageResult;
+    }
+
+    @Override
+    public RealTimeScheduleRES getSchedule(RealTimeScheduleREQ realTimeScheduleREQ) {
+        if (realTimeScheduleREQ == null) {
+            THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+        }
+        ScheduleEO scheduleEO = self.getById(realTimeScheduleREQ.getScheduleId());
+
+        /**
+         * 站点ID查站名
+         */
+        String startStation = stationMapper.selectById(realTimeScheduleREQ.getStartStationId()).getStationName();
+        String endStation = stationMapper.selectById(realTimeScheduleREQ.getEndStationId()).getStationName();
+
+        /**
+         * 获取出发时间和到达时间
+         */
+        ReserveSeatDTO reserveSeatDTO = ReserveSeatDTO.builder()
+                .scheduleId(realTimeScheduleREQ.getScheduleId())
+                .startStationId(realTimeScheduleREQ.getStartStationId())
+                .endStationId(realTimeScheduleREQ.getEndStationId())
+                .build();
+        TimeDTO timeDTO = calculation.timeCalculation(reserveSeatDTO);
+
+        /**
+         * 计算票价
+         */
+        CalcTicketPriceDTO calcTicketPriceDTO = CalcTicketPriceDTO.builder()
+                .scheduleId(realTimeScheduleREQ.getScheduleId())
+                .startStationId(realTimeScheduleREQ.getStartStationId())
+                .endStationId(realTimeScheduleREQ.getEndStationId())
+                .build();
+        BigDecimal price = calculation.ticketPriceCalculation(calcTicketPriceDTO);
+
+
+        return RealTimeScheduleRES.builder()
+                .scheduleId(scheduleEO.getId())
+                .startTime(timeDTO.getStartStationTime())
+                .endTime(timeDTO.getEndStationTime())
+                .startStation(startStation)
+                .endStation(endStation)
+                .price(price)
+                .remainTicket(scheduleEO.getAvailingTickets())
+                .build();
     }
 
     private ScheduleEO getSchedule(Long trainId, Long routeId, LocalDateTime startTime){
@@ -240,7 +280,6 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
         return scheduleEO.getAvailingTickets();
     }
 
-    /**外部调用*/
     public PageResult<RealTimeScheduleRES> getRealTimeSchedule(RealTimeSchedulePageQueryREQ realTimeSchedulePageQueryREQ){
         //参数校验
         if (realTimeSchedulePageQueryREQ == null) {
@@ -273,12 +312,12 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
         //找出同时包含出发站和终点站的路线ID
         List<Long> startRouteIds = routeStationsStart.stream()
                 .map(RouteStationsEO::getRouteId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Long> commonRouteIds = routeStationsEnd.stream()
                 .map(RouteStationsEO::getRouteId)
                 .filter(startRouteIds::contains)
-                .collect(Collectors.toList());
+                .toList();
 
         //处理出发时间
         LocalDateTime startTime = realTimeSchedulePageQueryREQ.getNowTime().withHour(0).withMinute(0).withSecond(0);
@@ -294,7 +333,6 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
                 .map(schedule -> {
                     RealTimeScheduleRES res = new RealTimeScheduleRES();
                     //计算时间
-                    Calculation calculation = new Calculation();
                     ReserveSeatDTO ReserveSeatDTO = new ReserveSeatDTO(
                             schedule.getId(),
                             realTimeSchedulePageQueryREQ.getStartStationId(),
@@ -314,7 +352,7 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
                     res.setEndStation(endStation);
                     res.setRemainTicket(schedule.getAvailingTickets());
                     return res;
-                }).collect(Collectors.toList());
+                }).toList();
 
         // 将最终的结果转换为分页对象
         Page<RealTimeScheduleRES> page = new Page<>(realTimeSchedulePageQueryREQ.getPage(), realTimeSchedulePageQueryREQ.getPageSize(), resList.size());
